Ditch MyBatis Plus